err/django-blogango.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/blogango'...
Compiling './lib/python3.5/site-packages/blogango/akismet.py'...
***   File "./lib/python3.5/site-packages/blogango/akismet.py", line 136
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/blogango/conf'...
Listing './lib/python3.5/site-packages/blogango/management'...
Listing './lib/python3.5/site-packages/blogango/management/commands'...
Compiling './lib/python3.5/site-packages/blogango/management/commands/update_reactions.py'...
***   File "./lib/python3.5/site-packages/blogango/management/commands/update_reactions.py", line 30
    print "getting backtype results for %s" % (entry_url)
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blogango/search.py'...
***   File "./lib/python3.5/site-packages/blogango/search.py", line 15
    print [result['Url'] for result in results]
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/blogango/static'...
Listing './lib/python3.5/site-packages/blogango/static/blogango'...
Listing './lib/python3.5/site-packages/blogango/static/blogango/admin'...
Listing './lib/python3.5/site-packages/blogango/static/blogango/admin/img'...
Listing './lib/python3.5/site-packages/blogango/static/blogango/css'...
Listing './lib/python3.5/site-packages/blogango/static/blogango/images'...
Listing './lib/python3.5/site-packages/blogango/static/blogango/js'...
Listing './lib/python3.5/site-packages/blogango/templates'...
Listing './lib/python3.5/site-packages/blogango/templates/blogango'...
Listing './lib/python3.5/site-packages/blogango/templates/blogango/admin'...
Listing './lib/python3.5/site-packages/blogango/templatetags'...
Compiling './lib/python3.5/site-packages/blogango/templatetags/gravatar.py'...
***   File "./lib/python3.5/site-packages/blogango/templatetags/gravatar.py", line 42
    raise template.TemplateSyntaxError, "%r tag requires a single argument" % token.contents.split()[0]
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blogango/views.py'...
***   File "./lib/python3.5/site-packages/blogango/views.py", line 152
    except AkismetError, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_blogango-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
